# WaveScript

./: .gitignore  LICENSE  README.md  config.toml  pyproject.toml
.github/workflows/: build-macos.yml  build-windows.yml  build.yml
assets/: style.qss
assets/icons/: app.icns
src/app/: main.py  settings_view.py  srt_editor.py  transcriber.py  transcriber_types.py  transcriber_ui.py
src/util/: build.py  context.py  fonts.py  media.py
